overflow fix

--- a/common/common.scss
+++ b/common/common.scss
@@ -35,7 +35,7 @@ body {
     }
 }
 
-.main {
+#main-outlet {
     overflow-x: hidden;
 }
 
